--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "budget",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ttargonski.github.io/budget/",
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -10,6 +10,7 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "uuidv4": "^6.2.5"
